--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "dependencies": {
+    "build": "^0.1.4",
     "node": "^16.3.0",
     "package.json": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "run": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "name": "lyrios",
   "description": "Project 3 - Create Your Music Playlist App",
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/michaelcodes23/Lyrios.git"
