--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "run": "^1.4.0"
   },
   "scripts": {
+    "start": "server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "name": "lyrios",
