--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "build": "^0.1.4",
     "node": "^16.3.0",
     "package.json": "^2.0.1",
+    "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
